// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfferData should render correctly 1`] = `
<View
  style={
    {
      "gap": 16,
    }
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
            },
            {},
          ],
          false,
        ]
      }
    >
      amount
    </Text>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          style={
            [
              undefined,
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              },
              {
                "height": 13,
                "width": 152,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "flexShrink": 0,
                },
                {
                  "paddingBottom": 2.5,
                  "paddingLeft": 2.5,
                  "paddingRight": 2.5,
                  "paddingTop": 2.5,
                },
              ]
            }
          >
            <test-file-stub
              fill="#888"
              style={
                [
                  {
                    "height": 15,
                    "width": 15,
                  },
                  undefined,
                ]
              }
            />
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
                {
                  "gap": 5,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "flex-end",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    [
                      {
                        "opacity": 0.1,
                        "textAlign": "right",
                      },
                      [
                        {
                          "fontFamily": "Baloo2-SemiBold",
                          "fontSize": 16,
                          "letterSpacing": 0.16,
                          "lineHeight": 28,
                          "marginBottom": -13,
                          "marginTop": -13,
                        },
                        false,
                      ],
                    ],
                    false,
                  ]
                }
              >
                0.00 0
              </Text>
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    [
                      {
                        "textAlign": "right",
                      },
                      [
                        {
                          "fontFamily": "Baloo2-SemiBold",
                          "fontSize": 16,
                          "letterSpacing": 0.16,
                          "lineHeight": 28,
                          "marginBottom": -13,
                          "marginTop": -13,
                        },
                        false,
                      ],
                    ],
                    false,
                  ]
                }
              >
                10 000
              </Text>
            </View>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontFamily": "Baloo2-SemiBold",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 28,
                      "marginBottom": -13,
                      "marginTop": -13,
                    },
                    false,
                  ],
                  false,
                ]
              }
            >
              sats
            </Text>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "height": 16,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "visible",
              "width": 16,
            }
          }
        >
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            collapsable={false}
            style={
              {
                "bottom": "100%",
                "marginBottom": 4,
                "opacity": 0,
                "position": "absolute",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontFamily": "Baloo2-Medium",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                    },
                    {
                      "color": "#F56522",
                    },
                  ],
                  false,
                ]
              }
            >
              copied!
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
            },
            {},
          ],
          false,
        ]
      }
    >
      price
    </Text>
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "space-between",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              false,
            ]
          }
        >
          123.00 EUR
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "height": 16,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "visible",
              "width": 16,
            }
          }
        >
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            collapsable={false}
            style={
              {
                "bottom": "100%",
                "marginBottom": 4,
                "opacity": 0,
                "position": "absolute",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontFamily": "Baloo2-Medium",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                    },
                    {
                      "color": "#F56522",
                    },
                  ],
                  false,
                ]
              }
            >
              copied!
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
            },
            {},
          ],
          false,
        ]
      }
    >
      to
    </Text>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#EAE3DF",
                },
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 28,
                },
              ],
              false,
            ]
          }
        >
          bc1q
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "color": "#2B1911",
                  },
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                ],
                false,
              ]
            }
          >
            7qquf
          </Text>
          8 ... 9
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "color": "#2B1911",
                  },
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                ],
                false,
              ]
            }
          >
            d37jk
          </Text>
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "height": 16,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "visible",
              "width": 16,
            }
          }
        >
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            collapsable={false}
            style={
              {
                "bottom": "100%",
                "marginBottom": 4,
                "opacity": 0,
                "position": "absolute",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontFamily": "Baloo2-Medium",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                    },
                    {
                      "color": "#F56522",
                    },
                  ],
                  false,
                ]
              }
            >
              copied!
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`OfferData should render correctly without price, currency and address 1`] = `
<View
  style={
    {
      "gap": 16,
    }
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
            },
            {},
          ],
          false,
        ]
      }
    >
      amount
    </Text>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          style={
            [
              undefined,
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              },
              {
                "height": 13,
                "width": 152,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "flexShrink": 0,
                },
                {
                  "paddingBottom": 2.5,
                  "paddingLeft": 2.5,
                  "paddingRight": 2.5,
                  "paddingTop": 2.5,
                },
              ]
            }
          >
            <test-file-stub
              fill="#888"
              style={
                [
                  {
                    "height": 15,
                    "width": 15,
                  },
                  undefined,
                ]
              }
            />
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                },
                {
                  "gap": 5,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "flex-end",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    [
                      {
                        "opacity": 0.1,
                        "textAlign": "right",
                      },
                      [
                        {
                          "fontFamily": "Baloo2-SemiBold",
                          "fontSize": 16,
                          "letterSpacing": 0.16,
                          "lineHeight": 28,
                          "marginBottom": -13,
                          "marginTop": -13,
                        },
                        false,
                      ],
                    ],
                    false,
                  ]
                }
              >
                0.00
              </Text>
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    [
                      {
                        "textAlign": "right",
                      },
                      [
                        {
                          "fontFamily": "Baloo2-SemiBold",
                          "fontSize": 16,
                          "letterSpacing": 0.16,
                          "lineHeight": 28,
                          "marginBottom": -13,
                          "marginTop": -13,
                        },
                        false,
                      ],
                    ],
                    false,
                  ]
                }
              >
                 100 000
              </Text>
            </View>
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontFamily": "Baloo2-SemiBold",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 28,
                      "marginBottom": -13,
                      "marginTop": -13,
                    },
                    false,
                  ],
                  false,
                ]
              }
            >
              sats
            </Text>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "height": 16,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "visible",
              "width": 16,
            }
          }
        >
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            collapsable={false}
            style={
              {
                "bottom": "100%",
                "marginBottom": 4,
                "opacity": 0,
                "position": "absolute",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontFamily": "Baloo2-Medium",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                    },
                    {
                      "color": "#F56522",
                    },
                  ],
                  false,
                ]
              }
            >
              copied!
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
            },
            {},
          ],
          false,
        ]
      }
    >
      to
    </Text>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              false,
            ]
          }
        >
          loading...
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexShrink": 1,
              "height": 16,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "visible",
              "width": 16,
            }
          }
        >
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          />
          <View
            collapsable={false}
            style={
              {
                "bottom": "100%",
                "marginBottom": 4,
                "opacity": 0,
                "position": "absolute",
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#2B1911",
                    "fontFamily": "Baloo2-Regular",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 24,
                  },
                  [
                    {
                      "fontFamily": "Baloo2-Medium",
                      "fontSize": 14,
                      "letterSpacing": 0.14,
                      "lineHeight": 20,
                    },
                    {
                      "color": "#F56522",
                    },
                  ],
                  false,
                ]
              }
            >
              copied!
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
